# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.admin  README.md  app_settings.toml
.github/workflows/: rust.yml
.sqlx/: query-1e12d27b55c4d8bac741e6dc9a6f79fee1b5e2df4152d41555d04576c3ac606b.json
configuration/: base.toml  local.toml  production.toml
migrations/: 20240802070110_rename_subscribtions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/services/: mod.rs  subscribtions.rs
tests/: health_check.rs  subscribe.rs
